--- a/style.css
+++ b/style.css
@@ -3,3 +3,46 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1.Header{
+  text-align: center;
+  color: red;
+}
+
+nav.Links{
+  text-align: center;
+}
+
+img.exceptionalrealty{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+figcaption.cap{
+  text-align: center;
+  font-size: small;
+
+}
+
+a{
+  padding-left: 10px; 
+  padding-right: 10px;
+}
+
+p.featureproperty{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+div.botdetails{
+  float: left;
+  text-align: center;
+  width: 25%;
+  background-color: red;
+  
+  
+}
